[gd_scene load_steps=18 format=2]

[ext_resource path="res://Scripts/WorldMap/WorldMap_UI.gd" type="Script" id=1]
[ext_resource path="res://Scenes/WorldMap/InternalResourceController.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/WorldMap/MineralLevels.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/WorldMap/ResourceUI.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/WorldMap/HazardsContainer.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/WorldMap/GenomeDamage.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/Fonts/OpenSans-22.tres" type="DynamicFont" id=7]
[ext_resource path="res://Scenes/WorldMap/TransposonUI.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/WorldMap/BiomeIcon.tscn" type="PackedScene" id=10]
[ext_resource path="res://Assets/Images/Menus/Q.png" type="Texture" id=11]
[ext_resource path="res://Scenes/Missions/Missions.tscn" type="PackedScene" id=12]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Assets/Fonts/OpenSans-Bold.ttf"

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = SubResource( 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.392157, 0.392157, 0.392157, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 0 )
border_blend = true

[sub_resource type="DynamicFont" id=5]
size = 24
font_data = SubResource( 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0, 0.109804, 1, 1 )
border_color = Color( 1, 1, 1, 1 )
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_size = 2

[node name="WorldMap_UI" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="InternalPanel" type="Panel" parent="."]
margin_right = 410.0
margin_bottom = 900.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StoredResourcesLabel" type="RichTextLabel" parent="InternalPanel"]
margin_right = 410.0
margin_bottom = 50.0
mouse_filter = 2
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]Stored Resources[/center]"
text = "Stored Resources"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="q_mark" type="TextureRect" parent="InternalPanel/StoredResourcesLabel"]
anchor_top = 0.00806749
anchor_bottom = 0.00806763
margin_left = 370.0
margin_top = 12.0
margin_right = 529.0
margin_bottom = 206.0
rect_scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InternalResourceController" parent="InternalPanel" instance=ExtResource( 2 )]
margin_left = 8.11011
margin_top = 50.6299
margin_right = -11.8899
margin_bottom = -9.37012

[node name="MineralLevels" parent="InternalPanel" instance=ExtResource( 3 )]
anchor_top = -0.000779894
anchor_bottom = 0.99922
margin_left = 23.0
margin_top = 814.0
margin_right = -91.0
margin_bottom = -24.0

[node name="TransposonLabel2" type="RichTextLabel" parent="InternalPanel"]
margin_left = 21.0
margin_top = 772.957
margin_right = 311.0
margin_bottom = 802.957
mouse_filter = 2
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "Elements"
text = "Elements"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="q_mark1" type="TextureRect" parent="InternalPanel"]
margin_left = 139.581
margin_top = 778.961
margin_right = 298.581
margin_bottom = 972.961
rect_scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 11 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Poison" type="Button" parent="InternalPanel"]
margin_left = 333.0
margin_top = 796.0
margin_right = 388.0
margin_bottom = 831.0
text = "Poison"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Antidote" type="Button" parent="InternalPanel"]
margin_left = 328.0
margin_top = 835.0
margin_right = 383.0
margin_bottom = 870.0
text = "Antidote"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExternalPanel" type="Panel" parent="."]
margin_left = 1310.0
margin_right = 1600.0
margin_bottom = 900.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResourcePanel" type="Panel" parent="ExternalPanel"]
margin_left = 10.0
margin_top = 75.0
margin_right = 280.0
margin_bottom = 236.0
mouse_filter = 2
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="ResourceUI" parent="ExternalPanel/ResourcePanel" instance=ExtResource( 4 )]
anchor_left = 0.037037
anchor_top = 0.0555556
anchor_right = 0.962963
anchor_bottom = 0.944444
margin_right = 0.0
margin_bottom = 0.0

[node name="HazardPanel" type="Panel" parent="ExternalPanel"]
margin_left = 10.0
margin_top = 274.0
margin_right = 280.0
margin_bottom = 414.0
mouse_filter = 2
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="HazardsContainer" parent="ExternalPanel/HazardPanel" instance=ExtResource( 5 )]
anchor_left = 0.015
anchor_top = 0.017
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.0499997
margin_top = 7.62
margin_right = -5.0
margin_bottom = -13.0

[node name="TileResourcesLabel" type="RichTextLabel" parent="ExternalPanel"]
margin_top = 40.0
margin_right = 290.0
margin_bottom = 75.0
mouse_filter = 2
custom_fonts/normal_font = SubResource( 5 )
bbcode_enabled = true
bbcode_text = "[center]Resources[/center]"
text = "Resources"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="q_mark2" type="TextureRect" parent="ExternalPanel/TileResourcesLabel"]
margin_left = 250.0
margin_top = 5.6
margin_right = 409.0
margin_bottom = 199.6
rect_scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TileResourcesLabel3" type="RichTextLabel" parent="ExternalPanel"]
margin_top = 236.0
margin_right = 290.0
margin_bottom = 274.0
mouse_filter = 2
custom_fonts/normal_font = SubResource( 5 )
bbcode_enabled = true
bbcode_text = "[center]Environment[/center]"
text = "Environment"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="q_mark3" type="TextureRect" parent="ExternalPanel/TileResourcesLabel3"]
margin_left = 250.0
margin_top = 5.0
margin_right = 409.0
margin_bottom = 199.0
rect_scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TileResourcesLabel2" type="RichTextLabel" parent="ExternalPanel"]
margin_right = 235.0
margin_bottom = 50.0
mouse_filter = 2
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[center][u]Current Tile[/u][/center]"
text = "Current Tile"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BiomeIcon" parent="ExternalPanel" instance=ExtResource( 10 )]
anchor_left = 0.82513
anchor_top = 0.0127557
anchor_right = 0.932027
anchor_bottom = 0.0427557
margin_right = 0.0
margin_bottom = 0.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GenomeStatusLabel" type="RichTextLabel" parent="."]
margin_left = 1310.0
margin_top = 414.0
margin_right = 1600.0
margin_bottom = 462.0
mouse_filter = 2
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[center][u]Genome Status[/u][/center]"
text = "Genome Status"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TransposonLabel" type="RichTextLabel" parent="."]
margin_left = 1310.0
margin_top = 454.5
margin_right = 1600.0
margin_bottom = 494.5
mouse_filter = 2
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "[center]New TEs[/center]"
text = "New TEs"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="q_mark4" type="TextureRect" parent="TransposonLabel"]
margin_left = 250.0
margin_top = 5.0
margin_right = 409.0
margin_bottom = 199.0
rect_scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GenomeStatusLabel2" type="RichTextLabel" parent="."]
margin_left = 1310.0
margin_top = 593.16
margin_right = 1600.0
margin_bottom = 633.16
mouse_filter = 2
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "[center]Damaged Genes[/center]"
text = "Damaged Genes"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="q_mark5" type="TextureRect" parent="GenomeStatusLabel2"]
margin_left = 250.0
margin_top = 5.0
margin_right = 409.0
margin_bottom = 199.0
rect_scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TransposonPanel" type="Panel" parent="."]
margin_left = 1320.0
margin_top = 491.333
margin_right = 1590.0
margin_bottom = 592.333
mouse_filter = 2
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TransposonUI" parent="TransposonPanel" instance=ExtResource( 9 )]
anchor_left = 0.0631926
anchor_top = -0.0299109
anchor_right = 0.952193
anchor_bottom = 1.03009
margin_top = 0.0209994
margin_right = 559.97
margin_bottom = 249.961
rect_scale = Vector2( 0.3, 0.3 )

[node name="GenomePanel" type="Panel" parent="."]
margin_left = 1320.0
margin_top = 631.1
margin_right = 1590.0
margin_bottom = 778.1
mouse_filter = 2
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GenomeDamage" parent="GenomePanel" instance=ExtResource( 6 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = -62.1
margin_right = 128.0
margin_bottom = 63.9

[node name="RepairGenome" type="Button" parent="GenomePanel"]
anchor_top = 0.000496585
anchor_bottom = 0.000496585
margin_left = 2.0
margin_top = 161.0
margin_right = 268.0
margin_bottom = 230.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/normal = SubResource( 6 )
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Repair Genome!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuPanel" type="Panel" parent="."]
anchor_top = -0.000887994
anchor_bottom = -0.000887994
margin_left = 410.0
margin_top = 830.0
margin_right = 1310.0
margin_bottom = 900.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MenuPanel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -380.0
margin_top = -51.0
margin_right = 350.0
margin_bottom = -19.0
mouse_filter = 2
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AcquireResources" type="Button" parent="MenuPanel/HBoxContainer"]
margin_right = 178.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Acquire Resources"

[node name="StatsScreen" type="Button" parent="MenuPanel/HBoxContainer"]
margin_left = 198.0
margin_right = 376.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Show Stats"

[node name="Help" type="Button" parent="MenuPanel/HBoxContainer"]
visible = false
margin_left = 299.0
margin_right = 427.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Help"

[node name="CheckGenome" type="Button" parent="MenuPanel/HBoxContainer"]
margin_left = 396.0
margin_right = 574.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Check Genome"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EventLog" type="Button" parent="MenuPanel/HBoxContainer"]
margin_left = 594.0
margin_right = 729.0
margin_bottom = 32.0
rect_min_size = Vector2( 135, 32 )
text = "Genome Diary"

[node name="map_q_mark" type="TextureRect" parent="MenuPanel"]
margin_left = 810.462
margin_top = 20.5986
margin_right = 969.462
margin_bottom = 214.599
rect_scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="control_hide" type="Control" parent="."]
margin_left = 2.0
margin_right = 42.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="popup" type="ColorRect" parent="control_hide"]
visible = false
margin_left = 200.0
margin_top = 50.0
margin_right = 400.0
margin_bottom = 150.0
color = Color( 0, 0, 0, 1 )

[node name="Label" type="Label" parent="control_hide/popup"]
margin_right = 196.0
margin_bottom = 99.0
text = "Click here for help with acquiring and converting resources."
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="popup2" type="ColorRect" parent="control_hide"]
visible = false
margin_left = 1322.0
margin_top = 75.0
margin_right = 1587.0
margin_bottom = 175.0
color = Color( 0, 0, 0, 1 )

[node name="Label" type="Label" parent="control_hide/popup2"]
margin_right = 263.0
margin_bottom = 99.0
text = "This shows the resources that can be eaten on your tile."
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="popup3" type="ColorRect" parent="control_hide"]
visible = false
margin_left = 1322.0
margin_top = 275.0
margin_right = 1587.0
margin_bottom = 375.0
color = Color( 0, 0, 0, 1 )

[node name="Label" type="Label" parent="control_hide/popup3"]
margin_right = 263.0
margin_bottom = 99.0
text = "This shows the temperature, pH UV index and Oxygen levels on your current tile."
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="popup4" type="ColorRect" parent="control_hide"]
visible = false
margin_left = 1322.0
margin_top = 490.0
margin_right = 1587.0
margin_bottom = 590.0
color = Color( 0, 0, 0, 1 )

[node name="Label" type="Label" parent="control_hide/popup4"]
margin_right = 263.0
margin_bottom = 99.0
text = "Each icon represents a new transposable element (TE) that has invaded your genome!"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="popup5" type="ColorRect" parent="control_hide"]
visible = false
margin_left = 1322.0
margin_top = 630.0
margin_right = 1587.0
margin_bottom = 730.0
color = Color( 0, 0, 0, 1 )

[node name="Label" type="Label" parent="control_hide/popup5"]
margin_right = 263.0
margin_bottom = 99.0
text = "Be sure to repair your genome before it is too damaged!"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Missions" parent="." instance=ExtResource( 12 )]
margin_left = 411.0
margin_top = 0.0
margin_right = -285.0
margin_bottom = -830.0
[connection signal="gui_input" from="InternalPanel/StoredResourcesLabel/q_mark" to="." method="_on_q_mark_gui_input"]
[connection signal="mouse_entered" from="InternalPanel/StoredResourcesLabel/q_mark" to="." method="_on_q_mark_mouse_entered"]
[connection signal="mouse_exited" from="InternalPanel/StoredResourcesLabel/q_mark" to="." method="_on_q_mark_mouse_exited"]
[connection signal="gui_input" from="InternalPanel/q_mark1" to="." method="_on_q_mark1_gui_input"]
[connection signal="pressed" from="InternalPanel/Poison" to="." method="_on_Poison_pressed"]
[connection signal="pressed" from="InternalPanel/Antidote" to="." method="_on_Antidote_pressed"]
[connection signal="mouse_entered" from="ExternalPanel/TileResourcesLabel/q_mark2" to="." method="_on_q_mark2_mouse_entered"]
[connection signal="mouse_exited" from="ExternalPanel/TileResourcesLabel/q_mark2" to="." method="_on_q_mark2_mouse_exited"]
[connection signal="mouse_entered" from="ExternalPanel/TileResourcesLabel3/q_mark3" to="." method="_on_q_mark3_mouse_entered"]
[connection signal="mouse_exited" from="ExternalPanel/TileResourcesLabel3/q_mark3" to="." method="_on_q_mark3_mouse_exited"]
[connection signal="mouse_entered" from="TransposonLabel/q_mark4" to="." method="_on_q_mark4_mouse_entered"]
[connection signal="mouse_exited" from="TransposonLabel/q_mark4" to="." method="_on_q_mark4_mouse_exited"]
[connection signal="mouse_entered" from="GenomeStatusLabel2/q_mark5" to="." method="_on_q_mark5_mouse_entered"]
[connection signal="mouse_exited" from="GenomeStatusLabel2/q_mark5" to="." method="_on_q_mark5_mouse_exited"]
[connection signal="pressed" from="GenomePanel/RepairGenome" to="." method="_on_EndMapTurn_pressed"]
[connection signal="pressed" from="MenuPanel/HBoxContainer/AcquireResources" to="." method="_on_AcquireResources_pressed"]
[connection signal="pressed" from="MenuPanel/HBoxContainer/StatsScreen" to="." method="_on_StatsScreen_pressed"]
[connection signal="pressed" from="MenuPanel/HBoxContainer/CheckGenome" to="." method="_on_CheckGenome_pressed"]
[connection signal="pressed" from="MenuPanel/HBoxContainer/EventLog" to="." method="_on_EventLog_pressed"]
[connection signal="gui_input" from="MenuPanel/map_q_mark" to="." method="_on_map_q_mark_gui_input"]
